# Lechuzav2

./: .gitignore  LICENSE  README.md  compose.yaml
Backend/: .coverage  Dockerfile  README.md  UV_MIGRATION.md  config.py  coverage.json  database.py  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  schemas.py  update_imports.py
Backend/api/v1/: routers.py
Backend/api/v1/dependencies/: get_company_uc.py  get_proyect_uc.py  get_save_ttal_docs_uc.py  get_user_create.py
Backend/api/v1/endpoints/: companies.py  company.py  projects.py  ttal_np_documents.py  users.py
Backend/application/dtos/: company_dto.py  projects_dto.py  ttal_np_documents.py  users_create.py  users_dto.py
Backend/application/use_cases/: company_uc.py  projects_uc.py  ttal_and_docs_uc.py  users_uc.py
Backend/core/dtos/: company_dto.py  ttal_np_documents.py
Backend/core/interfaces/: company_interface.py  file_management.py  projects_inteface.py  users.py
Backend/core/use_cases/: company_uc.py  create_user.py  projects_uc.py  save_ttal_and_docs_use_case.py  ttal_and_docs_uc.py  users_uc.py
Backend/database/: database.py
Backend/domain/entities/: __init__.py  api_docs.py  companies.py  correction_reports.py  documents.py  models_links.py  projects.py  statuses.py  ttals_nps.py  users.py
Backend/domain/interfaces/: company_interface.py  documents.py  file_management.py  projects_inteface.py  ttal_np.py  users.py
Backend/infrastructure/database/: config.py  database.py
Backend/infrastructure/repositories/: company_repo.py  document_repo.py  project_repo.py  ttal_np_repo.py  users_repo.py
Backend/infrastructure/storage/: file_managment_repo.py
Backend/models/: __init__.py  companies.py  correction_reports.py  documents.py  projects.py  statuses.py  ttals_nps.py  users.py
Backend/presentation/api/v1/: routers.py
Backend/presentation/api/v1/dependencies/: get_company_uc.py  (+3 more)
Backend/presentation/routers/: auth.py  company.py  documents.py  projects.py  ttal_np.py  users.py
Backend/routers/: auth.py  company.py  documents.py  projects.py  ttal_np.py  users.py
Backend/tests/: conftest.py  test_create_company_endpoint.py  test_create_user_endpoint.py  test_create_user_use_case.py  test_document_repo.py  test_login.py  test_save_ttal_and_docs_use_case.py  test_users.py
Backend/tests/integration/: test_create_user_endpoint.py  test_new_company.py  test_new_project.py  test_new_ttal_np_docs.py  test_users.py
Backend/tests/unit/: test_create_company_endpoint.py  test_create_project_endpoint.py  test_create_user_endpoint.py
(+23 files in other folders)
