[project]
name = "backend"
version = "0.1.0"
description = "Backend API for Lechuza v2 project using FastAPI and Clean Architecture"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core FastAPI and web framework
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "starlette==0.47.2",
    "fastapi-cli==0.0.8",
    "fastapi-cloud-cli==0.1.5",
    "httptools==0.6.4",
    "uvloop==0.21.0",
    "websockets==15.0.1",
    "watchfiles==1.1.0",

    # Database and ORM
    "sqlalchemy==2.0.42",
    "sqlmodel==0.0.24",
    "alembic==1.16.4",
    "psycopg2-binary==2.9.10",
    "greenlet==3.2.3",

    # Authentication and Security
    "fastapi-nextauth-jwt==2.1.1",
    "passlib==1.7.4",
    "bcrypt==4.3.0",
    "python-jose==3.5.0",
    "pyjwt==2.10.1",
    "cryptography==45.0.6",
    "cffi==1.17.1",
    "pycparser==2.22",
    "pyasn1==0.6.1",
    "rsa==4.9.1",
    "ecdsa==0.19.1",

    # Data Validation
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "email-validator==2.2.0",
    "annotated-types==0.7.0",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",

    # HTTP and Networking
    "httpx==0.28.1",
    "httpcore==1.0.9",
    "h11==0.16.0",
    "anyio==4.9.0",
    "sniffio==1.3.1",
    "certifi==2025.7.14",
    "urllib3==2.5.0",
    "idna==3.10",
    "dnspython==2.7.0",

    # File handling and utilities
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
    "click==8.2.1",
    "six==1.17.0",
    "packaging==25.0",
    "exceptiongroup==1.3.0",

    # Templates and Rendering
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "mako==1.3.10",

    # Configuration and CLI
    "pyyaml==6.0.2",
    "typer==0.16.0",
    "shellingham==1.5.4",
    "tomli==2.2.1",

    # Monitoring and Logging
    "sentry-sdk==2.34.1",
    "rich==14.1.0",
    "rich-toolkit==0.14.9",
    "pygments==2.19.2",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",

    # System utilities
    "colorama==0.4.6",
    "watchdog==6.0.0",
    "docopt==0.6.2",
    
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "pytest-watch>=4.2.0",
    "pytest-watcher>=0.4.3",
    "coverage>=7.11.0",
    
    # Code Quality and Linting
    "ruff>=0.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "application",
    "domain", 
    "infrastructure",
    "presentation",
    "shared"
]
